# tmkit

./: .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.dev  Makefile  README.md  README2.md  SECURITY.md  about.html  contact.html  cookiecutter-config-file.yml  docker-compose.yml  examples.ipynb  faq.html  feature.html  genindex.html  index.html  installation.html  issue.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  versions.html  whatsnew.html
.conda/: meta.yaml
.doctrees/: about.doctree  contact.doctree  environment.pickle  faq.doctree  feature.doctree  index.doctree  installation.doctree  issue.doctree  versions.doctree  whatsnew.doctree
.doctrees/tutorial/: index.doctree
.doctrees/tutorial/cath/: customised_fetch.doctree  fetch_data.doctree  index.doctree
.doctrees/tutorial/collation/: batch_proteins.doctree  index.doctree  individual_protein.doctree
.doctrees/tutorial/edge/: index.doctree
.doctrees/tutorial/feature/: entropy.doctree  helix_surface.doctree  index.doctree  lips_score.doctree  run_lips.doctree  topology.doctree
.doctrees/tutorial/get_started/: example_dataset.doctree  feature.doctree  index.doctree  overview.doctree
.doctrees/tutorial/mapping/: index.doctree  pdb_uniprot.doctree
.doctrees/tutorial/msa/: foldseek_af2.doctree  hhblits.doctree  hhfilter.doctree  index.doctree  jackhmmer.doctree  reformat.doctree
.doctrees/tutorial/mutation/: index.doctree  muthtp.doctree  predmuthtp.doctree
.doctrees/tutorial/ppi/: biogrid.doctree  connectivity.doctree  index.doctree  intact.doctree
.doctrees/tutorial/quality_control/: index.doctree
.doctrees/tutorial/sequence/: index.doctree  read.doctree  retrieve.doctree
.doctrees/tutorial/topology/: index.doctree  pdbtm.doctree  phobius.doctree  segment.doctree  tmhmm.doctree
.doctrees/tutorial/visualisation/: index.doctree
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  conda.yml  docker.yml  docs.yml  greetings.yml  pypi.yml  release-drafter.yml  release_pipeline.yml  release_testpypi.yml  test.yml
_sources/: faq.md  index.md  whatsnew.md
_sources/tutorial/: index.md
_sources/tutorial/cath/: fetch_data.md  index.md
_sources/tutorial/edge/: index.md
_sources/tutorial/feature/: lips_score.md  run_lips.md  topology.md
_sources/tutorial/get_started/: index.md  overview.md
_sources/tutorial/mapping/: index.md  pdb_uniprot.md
_sources/tutorial/msa/: foldseek_af2.md  index.md
_sources/tutorial/mutation/: muthtp.md
_sources/tutorial/ppi/: biogrid.md
_sources/tutorial/sequence/: index.md
_sources/tutorial/topology/: index.md  phobius.md  tmhmm.md
conda/: conda_build_config.yaml  meta.yaml
docker/: README.md
docs/: requirements.txt
docs/source/: about.md  conf.py  contact.md  feature.md  index.md  index.rst  installation.md  issue.md  modules.rst  tmkit.base.rst  tmkit.chain.rst  tmkit.channel.rst  tmkit.contact.rst  tmkit.db.biogrid.rst  tmkit.db.cath.rst  tmkit.db.construct.rst  tmkit.db.intact.rst  tmkit.db.muthtp.rst  tmkit.db.predmuthtp.rst  tmkit.db.rst  tmkit.feature.lips.rst  tmkit.feature.rst  tmkit.id.rst  tmkit.interface.rst  tmkit.name.rst  tmkit.position.rst  tmkit.position.scenario.rst  tmkit.retrieve.rst  tmkit.rst  tmkit.seqnetrr.combo.rst  tmkit.seqnetrr.graph.rst  tmkit.seqnetrr.net.rst  tmkit.seqnetrr.rst  tmkit.seqnetrr.sequence.rst  tmkit.seqnetrr.util.rst  tmkit.seqnetrr.window.base.rst  tmkit.seqnetrr.window.rst  tmkit.sequence.rst  tmkit.structure.ppi.rst  tmkit.structure.rrc.rst  (+12 more)
docs/source/_static/: custom.css
docs/source/tutorial/: index.md
tests/: __init__.py  cath_test.py  collation_test.py  conftest.py  example_data  feature_test.py  mapping_test.py  residue_contact_test.py  sequence_test.py  topology_test.py
tests/test_data/: 1xqfA.fasta  1xqfA.jphobius
tests/test_data/fasta/: 1xqfA.fasta
tests/test_data/lips-1xqfA/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  LIPS.txt
tests/test_data/map/: pdb_chain_uniprot.csv
tests/test_data/rrc/: 1xqfA.dist
tests/test_data/xml/: 1xqf.xml
tests/test_example/: test_hello.py
tmkit/: .env  Path.py  SeqNetRR.py  __init__.py  __main__.py  cath.py  collate.py  edge.py  feature.py  fetch.py  mapping.py  msa.py  mut.py  ppi.py  qc.py  rrc.py  seq.py  topo.py  vs.py
tmkit/base/: PDB.py  Position.py  __init__.py
tmkit/chain/: Collate.py  CollateBatch.py  PDB.py
tmkit/channel/: Workbench.py
tmkit/contact/: Evaluator.py  Reader.py
tmkit/db/: Connectivity.py  Reader.py
tmkit/db/biogrid/: Reader.py
tmkit/db/cath/: Reader.py
tmkit/feature/: HelixSurface.py
tmkit/id/: Fasta.py  Mapping.py  PDB.py
tmkit/interface/: Tool.py  Topology.py
tmkit/name/: Mapping.py
tmkit/property/: HelixSurface.py  lips.pl
tmkit/retrieve/: Fasta.py  MSA.py  PDB.py  XML.py
tmkit/seqnetrr/: ComputLib.py  Controller.py  Path.py
tmkit/sequence/: Fasta.py  Index.py  PDB.py  XML.py
tmkit/structure/: PDB.py
tmkit/topology/: Phobius.py  TMHMM.py
tmkit/util/: Console.py  Kit.py  Reader.py  ToDictionary.py  Writer.py
tutorial/: index.html
tutorial/cath/: customised_fetch.html  fetch_data.html  index.html
tutorial/collation/: batch_proteins.html  index.html  individual_protein.html
tutorial/edge/: index.html
tutorial/feature/: entropy.html  helix_surface.html  index.html  lips_score.html  run_lips.html  topology.html
tutorial/get_started/: example_dataset.html  feature.html  index.html  overview.html
tutorial/mapping/: index.html  pdb_uniprot.html
tutorial/msa/: foldseek_af2.html  hhblits.html  hhfilter.html  index.html  jackhmmer.html  reformat.html
tutorial/mutation/: index.html  muthtp.html  predmuthtp.html
tutorial/ppi/: biogrid.html  connectivity.html  index.html  intact.html
tutorial/quality_control/: index.html
tutorial/sequence/: index.html  read.html  retrieve.html
tutorial/topology/: index.html  pdbtm.html  phobius.html  segment.html  tmhmm.html
tutorial/visualisation/: index.html
(+149 files in other folders)
