[tool.poetry]
name = "tmkit"
version = "0.0.6"
description = ""
authors = ["Jianfeng Sun <jianfeng.sunmt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.4"
pandas = "^2.2.3"
biopandas = "^0.5.1"
openpyxl = "^3.1.5"
biopython = "^1.85"
pyfiglet = "^1.0.2"
xmltramp2 = "^3.1.1"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
